Perkin-UAT/force-app/main/default/objects/Email_Services__c/Email_Services__c.object-meta.xml
<CustomObject>
    <description>Custom Object to store all Email related Operations info Like Email-To-Cases, Email Alerts, Email Templates, etc.</description>
    <label>Email Service</label>
    <nameField>
        <displayFormat>ES-{0000}</displayFormat>
        <label>Email Services Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>