Perkin-UAT/force-app/main/default/objects/Email_Services__c/fields/Email_To_Case_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_To_Case_Name__c</fullName>
    <label>Email-To-Case Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>