Perkin-UAT/force-app/main/default/objects/Email_Services__c/fields/EmailAlert_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>EmailAlert_DeveloperName__c</fullName>
    <label>EmailAlert DeveloperName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>