Perkin-UAT/force-app/main/default/objects/Email_Services__c/fields/EmailAlert_ObjectName__c.field-meta.xml
<CustomField>
    <fullName>EmailAlert_ObjectName__c</fullName>
    <label>EmailAlert ObjectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>