Perkin-UAT/force-app/main/default/objects/Email_Services__c/fields/EmailAlert_SenderType__c.field-meta.xml
<CustomField>
    <fullName>EmailAlert_SenderType__c</fullName>
    <label>EmailAlert SenderType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CurrentUser</fullName>
            </value>
            <value>
                <fullName>OrgWideEmailAddress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>