Perkin-UAT/force-app/main/default/objects/Email_Services__c/fields/EmailAlert_TemplateId__c.field-meta.xml
<CustomField>
    <fullName>EmailAlert_TemplateId__c</fullName>
    <label>EmailAlert TemplateId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>