Perkin-UAT/force-app/main/default/objects/Email_Services__c/fields/EmailTemplate_Body__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplate_Body__c</fullName>
    <label>EmailTemplate Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>