Perkin-UAT/force-app/main/default/objects/Email_Services__c/fields/EmailTemplate_Id__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplate_Id__c</fullName>
    <label>EmailTemplate Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>