Perkin-UAT/force-app/main/default/objects/Email_Services__c/fields/EmailTemplate_Name__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplate_Name__c</fullName>
    <label>EmailTemplate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>