Perkin-UAT/force-app/main/default/objects/Email_Services__c/fields/Queue_Active__c.field-meta.xml
<CustomField>
    <fullName>Queue_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Queue Active?</label>
    <type>Checkbox</type>
</CustomField>