Perkin-UAT/force-app/main/default/objects/Email_Services__c/fields/Queue_Description__c.field-meta.xml
<CustomField>
    <fullName>Queue_Description__c</fullName>
    <label>Queue Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>