Perkin-UAT/force-app/main/default/objects/Email_Services__c/fields/Queue_Email__c.field-meta.xml
<CustomField>
    <fullName>Queue_Email__c</fullName>
    <label>Queue Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>