Perkin-UAT/force-app/main/default/objects/Email_Services__c/recordTypes/Email_Alert.recordType-meta.xml
<RecordType>
    <fullName>Email_Alert</fullName>
    <active>true</active>
    <label>Email Alert</label>
</RecordType>