Perkin-UAT/force-app/main/default/objects/Email_Services__c/recordTypes/Email_Template.recordType-meta.xml
<RecordType>
    <fullName>Email_Template</fullName>
    <active>true</active>
    <label>Email Template</label>
</RecordType>