Perkin-UAT/force-app/main/default/objects/Email_Services__c/recordTypes/Email_To_Case.recordType-meta.xml
<RecordType>
    <fullName>Email_To_Case</fullName>
    <active>true</active>
    <label>Email-To-Case</label>
</RecordType>