Perkin-UAT/force-app/main/default/objects/Email_Services__c/recordTypes/Queue.recordType-meta.xml
<RecordType>
    <fullName>Queue</fullName>
    <active>true</active>
    <description>Store Queue related Information</description>
    <label>Queue</label>
</RecordType>